[gd_scene load_steps=3 format=3 uid="uid://cvtdfr4ab61cj"]

[ext_resource type="Script" path="res://Buttons/gotarmor.gd" id="1_82i8u"]
[ext_resource type="FontFile" uid="uid://debggn5x54r8m" path="res://Assets/ObliviousFont.ttf" id="2_3omvk"]

[node name="You got armor" type="Node2D"]
script = ExtResource("1_82i8u")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -19.0
offset_right = 1279.0
offset_bottom = 677.0
color = Color(0.32549, 0.635294, 0.4, 1)

[node name="Button" type="Button" parent="."]
offset_left = 464.0
offset_top = 344.0
offset_right = 701.0
offset_bottom = 433.0
theme_override_fonts/font = ExtResource("2_3omvk")
theme_override_font_sizes/font_size = 30
text = "Equip"

[node name="Button2" type="Button" parent="."]
offset_left = 464.0
offset_top = 446.0
offset_right = 701.0
offset_bottom = 535.0
theme_override_fonts/font = ExtResource("2_3omvk")
theme_override_font_sizes/font_size = 30
text = "Dont Equip"

[node name="Button3" type="Button" parent="."]
offset_left = 464.0
offset_top = 548.0
offset_right = 701.0
offset_bottom = 637.0
theme_override_fonts/font = ExtResource("2_3omvk")
theme_override_font_sizes/font_size = 30
text = "View Stats"

[node name="Label" type="Label" parent="."]
offset_left = 50.0
offset_top = 62.0
offset_right = 1098.0
offset_bottom = 169.0
theme_override_fonts/font = ExtResource("2_3omvk")
theme_override_font_sizes/font_size = 80
text = "You got:
"
horizontal_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
